# ar_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  home_disparity0.exr  main.cpp  setup.sh  test.cpp  textrendertest.txt
kernels/: disparity_image_kernel.cpp  disparity_video_kernel.cpp  kernel.cpp
shaders/: boxShader.vert  compile.sh  frag.spv  lamp.frag  lamp.vert  lightshader.frag  pbr.vert  phongLightFrag.spv  second.frag  second.vert  second_frag.spv  select.vert  selected.frag  shader.frag  shader.vert  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  vert.spv
shaders/experimental/: computeDisparity.comp  computeDisparity.spv  computeShader.comp  computeShader.spv  computeShader.vert  sgm.comp
shaders/gltfLoading/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
shaders/gltfloading/: mesh.vert
shaders/myScene/: box.frag  box.vert
shaders/myScene/sphere/: sphere.frag  sphere.vert
shaders/pbr_example/: filtercube.vert  irradiancecube.frag  skybox.frag  skybox.vert
shaders/pbr_example/spv/: filtercube.vert.spv  pbr.vert.spv  pbr_khr.frag.spv  skybox.frag.spv  skybox.vert.spv
src/: GameApplication.cpp  GameApplication.h  Populate.h  Renderer.cpp  Renderer.h  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  glTFModel.cpp  glTFModel.h
src.old/FaceAugment/: FaceDetector.cpp  FaceDetector.h  RealsenseStreamer.cpp  ThreadSpawner.cpp
src.old/Models/: MeshModel.h  SceneObject.h
src.old/Platform/: Camera.cpp  benchmark.h  threadPool.h
src.old/include/: load_file.h  settings.h  triangle.h
src.old/pipeline/: Buffer.cpp  Buffer.h  Pipeline.cpp  Textures.cpp
src.old/renderer/: GUI.cpp  GUI.h  GameApplication.h  LoadSettings.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/FaceAugment/: FaceDetector.cpp  FaceDetector.h  RealsenseStreamer.h  ThreadSpawner.cpp  ThreadSpawner.h
src/Mesh/: Mesh.cpp  Mesh.hpp  MeshModel.cpp  MeshModel.h  Object.h
src/Models/: Mesh.h  MeshGenerator.h  MeshModel.cpp  MeshModel.h  SceneObject.cpp  SceneObject.h
src/Platform/: Camera.cpp  Camera.h  LoadSettings.cpp  LoadSettings.h  Platform.cpp  Platform.h
src/Renderer/: Renderer.cpp  Renderer.h  shaderParams.h
src/builder/: Cam.cpp  Cam.h  Cube.cpp  Cube.h  DamagedHelmet.cpp  DamagedHelmet.h  Example.cpp  Example.h  Mercury.cpp  Mercury.h  MyModelExample.cpp  MyModelExample.h  Sphere.cpp  Sphere.h  Sun.cpp  Sun.h  Terrain.cpp  Terrain.h
src/core/: Base.h  Buffer.cpp  Buffer.h  Camera.h  MyModel.cpp  MyModel.h  ScriptBuilder.h  Texture.cpp  Texture.h  Validation.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanglTFModel.cpp  VulkanglTFModel.cpp.unfinished  VulkanglTFModel.h  VulkanglTFModel.h.unfinished  glTFModel.cpp  glTFModel.h  structs.h  vkMyModel.cpp  vkMyModel.h
src/discarded/: Application.cpp.unfinished  Application.h.unfinished  VulkanglTFModel.cpp  VulkanglTFModel.h  glTFModel.cpp  glTFModel.h  structs.h
src/headers/: Camera.h  InitiateVulkan.h  Mesh.hpp  MeshModel.h  Platform.cpp  Platform.h  PlayerController.h  Vfd.h  VulkanRenderer.hpp  stb_image.h  utilities.h  validation.h
src/imgui/: ImGUI.cpp  ImGUI.h  UISettings.h
src/include/: BufferCreation.h  Camera.h  MeshGenerator.h  Validation.h  helper_functions.h  stb_image.h  stbi_image_write.h  structs.h  triangle.h  utilities.h
src/libs/: Descriptors.cpp  Descriptors.h  GraphicsPipeline.cpp  GraphicsPipeline.h  TextureLoading.cpp  TextureLoading.h  Utils.cpp  Utils.h
src/objects/: BufferObject.cpp  BufferObject.h
src/pipeline/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandBuffers.cpp  CommandBuffers.h  Descriptors.cpp  Descriptors.h  Images.cpp  Images.h  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  Pipeline.cpp  Pipeline.h  Textures.cpp  Textures.h
src/record/: RealsenseStreamer.cpp  RealsenseStreamer.h  ThreadSpawner.cpp  ThreadSpawner.h
src/renderer/: GUI.cpp  GUI.h  GameApplication.cpp  GameApplication.h  LoadSettings.cpp  LoadSettings.h  VulkanCompute.cpp  VulkanCompute.h  VulkanRenderer.cpp  VulkanRenderer.hpp
src/source/: Allocator.cpp  Allocator.h  GameApplication.cpp  GameApplication.h  InitiateVulkan.cpp  Mesh.cpp  MeshModel.cpp  Vfd.cpp  VulkanRenderer.cpp
src/stereo/: Disparity.cpp  Disparity.h
src/tools/: Macros.h  Utils.h
user/: config.json  templates.json
